fix logout icon and back-to-cards button alignment

--- a/src/main/resources/css/Main.css
+++ b/src/main/resources/css/Main.css
@@ -31,11 +31,15 @@
     -fx-pref-width: 32px;
     -fx-background-color: transparent;
     -fx-background-image: url("/images/logoutIcon.png");
-    -fx-background-size: cover;
+    -fx-background-size: contain;
     -fx-background-position: center bottom;
     -fx-background-repeat: no-repeat no-repeat;
 }
 
 #logoutHBox {
     -fx-padding: 0.8125em 0.8125em 0 0;
+}
+
+.back-button {
+	-fx-padding: 0 0.625em 0 0;
 }
